@@ -6,8 +6,6 @@
         <?php $this->load->view('template/header'); ?>
             <h1>Welcome <?= $this->session->userdata('username') ?>  </h1>
         <?php $this->load->view('template/menu');?>
-        <link rel="stylesheet" type="text/css" href="<?php echo base_url();?>assets/css/message.css">
-      
     </head>    
     <body>
 
