@@ -3,9 +3,6 @@
  <h1>Welcome <?= $this->session->userdata('username') ?></h1>
  <?php $this->load->view('template/menu.php');?>
 <html>
-<head>
-    <link rel="stylesheet" type="text/css" href="<?php echo base_url();?>assets/css/message.css">
-</head>
 
 <body>
 <div style="margin-left:30px;">
