@@ -2,14 +2,16 @@
 defined('BASEPATH') OR exit('No direct script access allowed');
 ?>
 
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" type="text/css" media="all" href="<?php echo base_url(); ?>assets/css/style.css" />
 <link rel="stylesheet" type="text/css" media="all" href="<?php echo base_url(); ?>assets/css/menu.css" />
 <link rel="stylesheet" type="text/css" media="all" href="<?php echo base_url();?>assets/css/message.css">
+
 <div id="header">
-
 <img src="<?php echo base_url(); ?>uploads/logo/logo1.png" alt="logo">
-
 </div> 
 
 
