@@ -18,31 +18,31 @@ echo "<ul class=\"sf-menu\">";
 						echo anchor('setup/dispemailsetting', 'Email Setting', array('title' => 'Email Setting'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/displayrole', 'Add Role', array('title' => 'Add Role'));
+						echo anchor('setup/displayrole', 'Role', array('title' => 'Role'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/displaycategory', 'Add Category', array('title' => 'Add Category'));
+						echo anchor('setup/displaycategory', 'Category', array('title' => 'Category'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/seatreserve', 'Add Seat Reservation', array('title' => 'Add Seat Reservation'));
+						echo anchor('setup/seatreserve', 'Seat Reservation', array('title' => 'Seat Reservation'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/sc', 'Add Study center', array('title' => 'Add Study center'));
+						echo anchor('setup/sc', 'Study center', array('title' => 'Study center'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/dept', 'Add Department', array('title' => 'Add Department'));
+						echo anchor('setup/dept', 'Department', array('title' => 'Department'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/desig', 'Add Designation', array('title' => 'Add Designation'));
+						echo anchor('setup/desig', 'Designation', array('title' => 'Designation'));
 					echo "</li>";				
 					echo "<li>";
-						echo anchor('setup/viewprogram', 'Add Program and Seat', array('title' => 'Add Program and Seat'));
+						echo anchor('setup/viewprogram', 'Program and Seat', array('title' => 'Program and Seat'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/subject', 'Add Subject', array('title' => 'Add Subject'));
+						echo anchor('setup/subject', 'Subject', array('title' => 'Subject'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/fees', 'Add Program Fees', array('title' => 'Add Program Fees'));
+						echo anchor('setup/fees', 'Program Fees', array('title' => 'Program Fees'));
 					echo "</li>";
 				echo "</ul>";
 			echo "</li>";
@@ -78,7 +78,7 @@ echo "<ul class=\"sf-menu\">";
 						echo anchor('upl/uploadstulist', 'Upload Student List', array('title' => 'Upload Student List'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('upl/uploadteachlist', 'Upload Teacher List', array('title' => 'Upload Teacher List'));
+						echo anchor('upl/uploadtlist', 'Upload Teacher List', array('title' => 'Upload Teacher List'));
 					echo "</li>";					
 				echo "</ul>";
 			echo "</li>";
