@@ -1,0 +1,1 @@
+ALTER TABLE `user_role_type` ADD `scid` INT(10) NOT NULL AFTER `roleid`, ADD `deptid` INT(10) NOT NULL AFTER `scid`;
